# SCRIPTS

./: README.md  async.py  email.ipynb  http_async.py  log.csv  mp4_mp3.ipynb  ngrok.ipynb  partial_func_inner.ipynb  pyproject.toml  retrying.ipynb  scrap_vinte_pila.ipynb  sock.py  vinte_pila_scrap.py  youtube.ipynb
