[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["greghonox <greghono@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
retrying = "^1.3.4"
pyngrok = "^7.1.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
